tests/e2e/semantics/try_scope3.error
Error: syntax error in story at line 7, column 5

7|    d = c
          ^

E0101: Variable `c` has not been defined.
