tests/e2e/semantics/try_scope3.story
try
	a = 1
catch as e
	b = 1
finally
	c = 1
d = c
